--- a/EcoWEB/Apps/Usuarios/templates/add_product.html
+++ b/EcoWEB/Apps/Usuarios/templates/add_product.html
@@ -97,7 +97,7 @@
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn">Añadir</button>
+        <button type="submit" class="btn">Añadir producto</button>
       </form>
 
     </div>
