--- a/EcoWEB/Apps/Usuarios/templates/add_product.html
+++ b/EcoWEB/Apps/Usuarios/templates/add_product.html
@@ -89,6 +89,21 @@
       }
 
 </style>
+
+<script>
+  // Mostrar el popup con SweetAlert
+  window.onload = function() {
+      var popupMessages = document.getElementById('popup-messages');
+      if (popupMessages && popupMessages.children.length > 0) {
+          Swal.fire({
+              icon: 'success',  // tipo de mensaje: 'success', 'error', 'warning', 'info', 'question'
+              title: '¡ÉXITO!',
+              html: popupMessages.innerHTML,
+          });
+      }
+  }
+</script>
+
 </head>
 <body>
   <div class="container_product">
