--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -141,7 +141,7 @@
   <div class="container-fluid">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Productos</a>
+        <a class="nav-link" href="/usuarios/lista_productos">Productos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Productores</a>
@@ -149,7 +149,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Contacto</a>
       </li>
-      <!-- Añade más elementos según sea necesario -->
     </ul>
   </div>
 </nav>
