--- a/EcoWEB/Apps/Usuarios/templates/add_product.html
+++ b/EcoWEB/Apps/Usuarios/templates/add_product.html
@@ -102,6 +102,25 @@
           });
       }
   }
+
+  function confirmAddProduct(event) {
+        event.preventDefault(); // Previene el envío del formulario inmediatamente
+        Swal.fire({
+            title: '¿Estás seguro?',
+            text: "¿Deseas añadir este producto?",
+            icon: 'question',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Sí, añadirlo',
+            cancelButtonText: 'Cancelar'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                event.target.submit(); // Envía el formulario si el usuario confirma
+            }
+        });
+    }
+
 </script>
 
 </head>
@@ -109,7 +128,7 @@
   <div class="container_product">
     <div class="product_form">
       <h2>Añadir nuevo producto</h2>
-      <form method="post" enctype="multipart/form-data">
+      <form method="post" enctype="multipart/form-data" onsubmit="confirmAddProduct(event)">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn">Añadir producto</button>
