--- a/EcoWEB/Apps/Usuarios/templates/products.html
+++ b/EcoWEB/Apps/Usuarios/templates/products.html
@@ -30,12 +30,13 @@
 
         .product-item {
             background-color: #ffffff;
-            border: 1px solid #ddd;
+            border: 2px solid #ddd;
             border-radius: 5px;
             overflow: hidden;
             text-align: center;
             margin: 10px;
-            padding: 20px;
+            padding: 20px 10px;
+            min-width: 500px;
         }
 
         .product-item img {
@@ -48,7 +49,7 @@
             margin-top: 10px;
             padding: 10px 20px;
             background-color: #3d8a4f;
-            color: #ffffff;
+            /* color: #ffffff; */
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -63,6 +64,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            width: 100%;
         }
 
         .products-grid .product-item {
@@ -81,6 +83,10 @@
             width: 100%; 
             height: auto;
             border-radius: 50%;
+        }
+
+        .h3 {
+            margin-top: 12px;
         }
 
 
@@ -117,7 +123,6 @@
         color: #ffffff;
         cursor: pointer;
         transition: background-color 0.3s ease;
-
         }
 
         .button_group {
@@ -135,7 +140,7 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
-            border: 1px solid #ddd;
+            border: 2px solid #ddd;
             border-radius: 5px;
             box-sizing: border-box;
         }
@@ -166,9 +171,7 @@
                 formElement.classList.remove('hidden');
             }
         }
-    </script>
 
-    <script>
         // Mostrar el popup con SweetAlert
         window.onload = function() {
             var popupMessages = document.getElementById('popup-messages');
@@ -179,6 +182,23 @@
                     html: popupMessages.innerHTML,
                 });
             }
+        }
+
+        function confirmDelete(productId) {
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "¡No podrás revertir esto!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, eliminarlo',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = `/usuarios/productos/delete/${productId}/`;
+                }
+            })
         }
     </script>
 
@@ -196,30 +216,30 @@
 
     <div class="container_productos">
         <h2>Mis Productos</h2>
+        {% load custom_filters %}
         <div class="products-grid">
             <a href="{% url 'add_product' %}" class="btn btn_pass">Añadir producto</a>
             {% for producto in productos %}
                 <div class="product-item">
                     <div id="img-{{ producto.id }}">
-                        <!-- <img src="{% if producto.imagen %}{% else %}https://dummyimage.com/420x260{% endif %}" alt="{{ producto.nombre }}"> -->
                         {% if producto.imagen %}
                             <img src="{{ producto.imagen }}" alt="{{ producto.nombre }}"  class="product-image">
                         {% else %}
-                            <img src="https://dummyimage.com/420x260" width="100" alt="{{ producto.nombre }}">
+                            <img src="https://dummyimage.com/600x400/3d003d/ffffff.png&text=Imagen+de+producto" width="100" alt="{{ producto.nombre }}">
                         {% endif %}
 
-                        <h3>{{ producto.nombre }}</h3>
+                        <h3 class="h3">{{ producto.nombre }}</h3>
                         <p>{{ producto.descripcion }}</p>
-                        <p>{{ producto.precio }}€</p>
+                        <p>{{ producto.precio|format_decimal }}€</p>
                         {% if producto.stock %}
                             <p>Unidades: {{ producto.stock }}</p>
                         {% endif %}
                         
-                        <a onclick="toggleEdit('{{ producto.id }}')" class="btn btn_pass">Editar</a>
-                        <a href="{% url 'delete_product' producto.id %}" class="btn btn-cancel">Eliminar</a>
+                        <a class="btn btn_pass" onclick="toggleEdit('{{ producto.id }}')">Editar</a>
+                        <a class="btn btn-cancel" onclick="confirmDelete('{{ producto.id }}')" >Eliminar</a>
                     </div>
                     <div id="form-{{ producto.id }}" class="hidden">
-                        <form method="post" action="{% url 'edit_product' producto.id %}" class="edit-form bg-white p-4 rounded" enctype="multipart/form-data">
+                        <form method="post" action="{% url 'edit_product' producto.id %}" class="edit-form" enctype="multipart/form-data">
                             {% csrf_token %}
                             <div>
                                 <label for="nombre">Nombre</label>
@@ -231,7 +251,7 @@
                             </div>
                             <div>
                                 <label for="precio">Precio (€)</label>
-                                <input type="number"  step="0.01" name="precio" value="{{ producto.precio }}">
+                                <input type="number"  step="0.01" name="precio" value="{{ producto.precio|format_decimal }}" min="0.01" required="True">
                             </div>
                             <div>
                                 <label for="stock">Unidades</label>
