--- a/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
@@ -133,8 +133,8 @@
 
             {% if user.is_productor %}
             <div class="button_group">
-                <a href="{% url 'products' %}" class="btn">Productos</a>
-                <a href="{% url 'edit_profile_prod' %}" class="btn">Editar Perfil Prod</a>
+                <a href="{% url 'products' %}" class="btn">Mis Productos</a>
+                <a href="{% url 'edit_profile_prod' %}" class="btn">Editar Perfil</a>
             {% endif %}
             </div>                
             <div class="button_group">
