--- a/EcoWEB/Apps/Productos/templates/edit_product.html
+++ b/EcoWEB/Apps/Productos/templates/edit_product.html
@@ -25,8 +25,8 @@
   /* Estilos para el formulario de editar perfil */
   body, html {
       height: 100%; 
-      margin: 0; /* Elimina los márgenes predeterminados */
-      font-family: Arial, sans-serif; /* Usa una fuente genérica */
+      margin: 0;
+      font-family: Arial, sans-serif;
   }
 
   .container_product {
