--- a/EcoWEB/Apps/Productos/templates/products.html
+++ b/EcoWEB/Apps/Productos/templates/products.html
@@ -221,6 +221,16 @@
         <div>
             <a href="{% url 'add_product' %}" class="btn btn_pass">Añadir producto</a>
         </div>
+        <div>
+            <form method="get" action="{% url 'products' %}">
+                <select name="categoria" onchange="this.form.submit()">
+                    <option value="">Todas las categorías</option>
+                    {% for categoria in opciones_categoria %}
+                        <option value="{{ categoria }}" {% if selected_categoria == categoria %}selected{% endif %}>{{ categoria }}</option>
+                    {% endfor %}
+                </select>
+            </form>
+        </div>
         <div class="products-grid">
             {% for producto in productos %}
                 <div class="product-item">
@@ -254,7 +264,7 @@
                             </div>
                             <div>
                                 <label for="precio">Precio (€)</label>
-                                <input type="number"  step="0.01" name="precio" value="{{ producto.precio|format_decimal }}" min="0.01" required="True">
+                                <input type="number" step="0.01" name="precio" value="{{ producto.precio }}" min="0.01" required="True">
                             </div>
                             <div>
                                 <label for="stock">Unidades</label>
@@ -285,6 +295,9 @@
                     </div>
                 </div>
             {% endfor %}
+        </div>
+        <div>
+            <a href="/" class="btn">Volver a Inicio</a>
         </div>
     </div>
 
